# PDFuse

./: .gitignore  Cargo.toml  config.toml  test.toml
locales/: en.yml  pl.yml
pdfuse-commandline/: Cargo.toml
pdfuse-commandline/src/: arguments.rs  commandline.rs  commandline_help.rs  lib.rs
pdfuse-merging/: Cargo.toml
pdfuse-merging/src/: data.rs  error.rs  lib.rs
pdfuse-merging/src/data/: bookmarks.rs  imager.rs  loaded_document.rs  loaded_image.rs  optional_thread.rs  size_guide.rs
pdfuse-parameters/: Cargo.toml
pdfuse-parameters/src/: bookmarks.rs  commandline.rs  commandline_arguments.rs  commandline_help.rs  errors.rs  file_finder.rs  invalid_source_type.rs  lib.rs  log_level.rs  parameters.rs  paths.rs  safe_destination.rs  safe_path.rs  source_path.rs
pdfuse-parameters/src/commandline_arguments/: tests.rs
pdfuse-parameters/tests/: commandline_arguments_tests.rs
pdfuse-sizing/: Cargo.toml
pdfuse-sizing/src/: custom_size.rs  errors.rs  iso_paper.rs  length.rs  lib.rs  page_size.rs  unit.rs
pdfuse-utils/: Cargo.toml
pdfuse-utils/src/: indexed.rs  lib.rs  logger.rs  progress.rs
picdocpdf-merging/src/data/: imager.rs
picdocpdf-parameters/: Cargo.toml
picdocpdf-parameters/src/: commandline_arguments.rs  errors.rs  file_finder.rs  parameters.rs  paths.rs
picdocpdf-parameters/src/commandline_arguments/: tests.rs
picdocpdf-parameters/test_resources/: test_config.toml
picdocpdf-rest/: Cargo.toml
picdocpdf-sizing/src/: custom_size.rs  errors.rs  lib.rs  page_size.rs  parsing.rs  size.rs  unit.rs
picdocpdf-utils/src/: indexed.rs  localization.rs  logger.rs  progress.rs
src/: lib.rs  main.rs  pdf.rs
src/pdf/: image_pdf.rs
test_items/documents/: LoremA5.doc  LoremA5.docx  LoremCustom.doc  LoremCustom.docx  text.txt
