[workspace]
resolver = "2"
members = [ "pdfuse-commandline",
    "pdfuse-merging",
    "pdfuse-parameters",
    "pdfuse-sizing",
    "pdfuse-utils",
]

[workspace.dependencies]
log = "0.4.27"
indicatif = "0.17.11"
rust-i18n = "3.1.4"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
printpdf = { version = "0.8.2", features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "ico",
] }

[workspace.lints.clippy]

[package]
name = "pdfuse"
version = "0.1.0"
edition = "2021"

[dependencies]
pdfuse-sizing = { path = "pdfuse-sizing" }
pdfuse-utils = { path = "pdfuse-utils" }
pdfuse-merging = { path = "pdfuse-merging" }
pdfuse-parameters = { path = "pdfuse-parameters" }
pdfuse-commandline = { path = "pdfuse-commandline" }
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
lopdf = "0.36.0"
rust-i18n.workspace = true
walkdir = "2.5.0"
printpdf = { workspace = true }
image = "0.25.6"
dashmap = "6.1.0"
rayon = "1.10.0"
indicatif.workspace = true
log.workspace = true
regex = "1.11.1"
dirs = "6.0.0"
toml = "0.8.22"
serde_json = "1.0.140"


# [dependencies]
# clap = { version = "4.5.21", features = ["derive"] }
# colored = "2.1.0"
# dashmap = "6.1.0"
# image = "0.25.5"
# indicatif = "0.17.9"
# log = "0.4.22"
# lopdf = "0.31.0"
# once_cell = "1.20.2"
# printpdf = {workspace = true}
# rayon = "1.10.0"
# regex = "1.11.1"
# rust-i18n = "3.1.2"
# walkdir = "2.5.0"

[package.metadata.i18n]
available-locales = ["en", "pl"]
default-locale = "en"
load-path = "locales"

# [lib]
# name = "pdf_test_lib"
# path = "src/lib.rs"

# [[bin]]
# name = "pdf_test_bin"
# path = "src/main.rs"

# [profile.release]
# strip = true
