[package]
name = "pdfuse-commandline"
version = "0.1.0"
edition = "2024"

[dependencies]
pdfuse-sizing = { path = "../pdfuse-sizing" }
pdfuse-utils = { path = "../pdfuse-utils" }
pdfuse-parameters = { path = "../pdfuse-parameters" }
clap = { version = "4.5.38", features = ["color","derive","cargo","unicode","wrap_help","usage","help","error-context","suggestions","string"] }
log.workspace = true
serde.workspace=true
toml = { version = "0.8.22", features = ["preserve_order"] }
indoc = "2"
color-print = "0.3.7"
rust-i18n.workspace = true
chrono = "0.4.41"

[lints]
workspace = true

[package.metadata.i18n]
available-locales = ["en", "pl"]
default-locale = "en"
load-path = "../locales"

[dev-dependencies]
serde_json = "1.0"
