[package]
name = "pdfuse-parameters"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["color","derive","cargo","unicode","wrap_help","usage","help","error-context","suggestions","string"] }
once_cell = "1.21.3"
regex = "1.11.1"
pdfuse-sizing = { path = "../pdfuse-sizing" }
pdfuse-utils = { path = "../pdfuse-utils" }
dirs = "6.0.0"
rust-i18n.workspace = true
log.workspace = true
walkdir = "2.5.0"
indoc = "2"
color-print = "0.3.7"
serde = "1.0.219"
toml = { version = "0.8.22", features = ["preserve_order"] }
chrono = "0.4.41"
indicatif.workspace = true

[dev-dependencies]
serde_json = "1.0"


[package.metadata.i18n]
available-locales = ["en", "pl"]
default-locale = "en"
load-path = "../locales"

[lints]
workspace = true
