[package]
name = "pdfuse-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
indicatif.workspace = true
log.workspace = true
rust-i18n.workspace = true

[package.metadata.i18n]
available-locales = ["en", "pl"]
default-locale = "en"
load-path = "../locales"

[lints]
workspace = true
