[package]
name = "pdfuse-parameters"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["color","derive"] }
once_cell = "1.20.2"
regex = "1.11.1"
pdfuse-sizing = { path = "../pdfuse-sizing" }
pdfuse-utils = { path = "../pdfuse-utils" }
dirs = "5.0.1"
rust-i18n.workspace = true
log.workspace = true
walkdir = "2.5.0"
serde = "1.0.215"
toml = { version = "0.8.19", features = ["preserve_order"] }
chrono = "0.4.38"

[package.metadata.i18n]
available-locales = ["en", "pl"]
default-locale = "en"
load-path = "../locales"

[lints]
workspace = true
